fix(pages/home): add styles for icons spacing
Temps passé: 1 hour 7 minutes

--- a/styles/index.css
+++ b/styles/index.css
@@ -427,6 +427,9 @@ h2 {
   box-shadow: 0 2px 5px #c2c2c2;
   position: relative;
 }
+.main-navigation .back-btn {
+  margin: 0 1rem;
+}
 
 .main-logo {
   display: block;
@@ -445,6 +448,9 @@ h2 {
   background: #e9e9e9;
   color: #353535;
   font-weight: bold;
+}
+.header-banner .location__icon {
+  margin-right: 1rem;
 }
 
 /*
@@ -474,6 +480,10 @@ h2 {
 }
 .navigation__link {
   margin-bottom: 0.5rem;
+}
+.navigation__link svg {
+  margin-right: 0.5rem;
+  width: 25px;
 }
 
 /*
@@ -561,12 +571,15 @@ h2 {
   position: absolute;
   right: 1.5rem;
   top: 1rem;
-  width: 30px;
-  height: 30px;
+  width: 25px;
 }
 .menu-card__save-icon svg {
+  stroke: black;
+  stroke-width: 20;
   width: 100%;
   height: 100%;
+  color: transparent;
+  transition: all 0.3s;
 }
 
 /*
@@ -577,6 +590,17 @@ h2 {
   display: block;
   color: #008766;
   background: #99E2D0;
+}
+
+.--saved.menu-card svg:hover,
+.--saved.menu-card svg {
+  stroke: #9356DC;
+  color: #9356DC;
+}
+
+.menu-card svg:hover {
+  stroke: #9356DC;
+  color: #9356DC;
 }
 
 /*
@@ -639,6 +663,7 @@ h2 {
 }
 .step-bloc__icon {
   margin-right: 1.5rem;
+  width: 25px;
 }
 
 /*
