--- a/styles/sass/components/_menu-card.scss
+++ b/styles/sass/components/_menu-card.scss
@@ -75,12 +75,15 @@
     position: absolute;
     right: 1.5rem;
     top: 1rem;
-    width: 30px;
-    height: 30px;
+    width: 25px;
 
     svg {
+      stroke: black;
+      stroke-width: 20;
       width: 100%;
       height: 100%;
+      color: transparent;
+      transition: all 0.3s;
     }
   }
 }
@@ -95,5 +98,20 @@
     display: block;
     color: $green;
     background: #99E2D0;
+  }
+}
+
+.--saved.menu-card {
+  svg:hover,
+  svg {
+    stroke:$primary-color;
+    color: $primary-color;
+  }
+}
+
+.menu-card {
+  svg:hover {
+    stroke:$primary-color;
+    color: $primary-color;
   }
 }
