--- a/styles/sass/pages/_home.scss
+++ b/styles/sass/pages/_home.scss
@@ -70,6 +70,7 @@
 
   &__icon {
     margin-right: 1.5rem;
+    width: 25px;
   }
 }
 
